--- a/res/css/style.css
+++ b/res/css/style.css
@@ -55,6 +55,7 @@ body{
     width: 100%;
   }
 #battle {
+  display: none;
   background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
   position: absolute;
   left: 45%;
